// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reserve Dashboard Snapshot tests should match snapshot when data is loaded 1`] = `
<div>
  <h1
    class="flex items-center space-x-4 lg:space-x-6 border-b p-8 text-3xl font-bold tracking-tight"
  >
    Reserve Assets
  </h1>
  <div
    class="p-8"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Total Reserve Assets
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            $99.07K
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Cosmos Reserve
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            $33.35K
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Reserve Shortfall
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            $7.84K
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reserve Dashboard Snapshot tests should match snapshot when data is loading 1`] = `
<div>
  <h1
    class="flex items-center space-x-4 lg:space-x-6 border-b p-8 text-3xl font-bold tracking-tight"
  >
    Reserve Assets
  </h1>
  <div
    class="p-8"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Total Reserve Assets
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            <div
              class="animate-pulse bg-muted w-[100px] h-[32px] rounded-full"
            />
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Cosmos Reserve
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            <div
              class="animate-pulse bg-muted w-[120px] h-[32px] rounded-full"
            />
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm"
      >
        <div
          class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
        >
          <h3
            class="tracking-tight text-sm font-medium"
          >
            Reserve Shortfall
          </h3>
        </div>
        <div
          class="p-6 pt-0"
        >
          <div
            class="text-2xl font-bold"
          >
            <div
              class="animate-pulse bg-muted w-[100px] h-[32px] rounded-full"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
